# pastry

./: .gitignore  .umirc.ts  404.html  CNAME  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  umi.js  vite.config.ts
.erb/configs/: webpack.config.base.ts  webpack.config.renderer.dev.ts
.erb/scripts/: build-binary.js
assets/: icon.icns
docs/: index.md
release/app/: package-lock.json  package.json
release/lib/: activeApp  macocr
src/: App.tsx  index.md  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binary/: OCR-aarch64-apple-darwin  OCR-x86_64-apple-darwin  sendkeys-aarch64-apple-darwin  sendkeys-x86_64-apple-darwin
src-tauri/src/: main.rs  spotlight.rs
src/Document/: index.md
src/Help/: index.md
src/components/AddPin/: index.tsx
src/components/Message/: index.css  index.tsx
src/components/Search/: index.css  index.tsx
src/components/ShortCut/: index.css  index.tsx
src/components/Sortable/: index.tsx
src/components/TimeAgo/: index.css  index.tsx
src/features/BookMark/: index.tsx
src/features/PasteBoard/: App.tsx
src/features/Script/: index.css  index.tsx
src/hooks/: useContextMenu.tsx  useInit.ts  useMouseLock.ts  useStorageState.ts  useVisibleChange.ts
src/main/: clipboardManager.ts  controller.ts  images.ts  main.ts  menu.ts  preload.js  runner.ts  store.ts  util.ts
src/renderer/: App.css  App.tsx  index.ejs  index.tsx
src/renderer/Pages/Search/: index.tsx
src/renderer/Pages/Settings/: index.css  index.tsx
src/renderer/components/Debugger/: index.css  index.tsx
src/renderer/components/Editor/: index.tsx  syntax.css
src/renderer/components/Empty/: index.css  index.tsx
src/renderer/components/ShortcutModal/: index.css  index.tsx
src/renderer/components/Toolbar/: index.css  index.tsx
src/renderer/services/: index.tsx
src/renderer/typings/: index.d.ts
src/renderer/utils/: index.tsx
src/typings/: index.d.ts
src/utils/: history.ts  ipc.ts  listener.ts  move.ts  ocr.ts  paste.ts  promise.ts  storage.ts  time.ts
(+30 files in other folders)
