[package]
name = "pastry"
version = "2.0.0"
description = "A macos clipboard manager"
authors = ["Troy Li <a@tianyi.li>"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "path-all", "macos-private-api", "window-all", "system-tray", "fs-all", "global-shortcut-all", "shell-sidecar", "shell-open"] }
tauri-plugin-clipboard = "0.3.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[target."cfg(target_os = \"macos\")".dependencies]
core-graphics = {version = "0.23"}
core-foundation = { version = "0.9.3" }
cocoa = { version = "0.25" }
objc =  { version = "0.2.7" }
objc_id = {version = "0.1.1" }
objc-foundation = { version = "0.1.1" }


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
